deployment/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cis-ops-backend
  namespace: cis-ops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cis-ops-backend
  template:
    metadata:
      labels:
        app: cis-ops-backend
    spec:
      containers:
      - name: backend
        image: docker.io/sayan896/cis-ops-backend:b32baab0890170f3bab08756f45d3261ca41720a
        ports:
        - containerPort: 4000
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: cis-ops-backend-service
  namespace: cis-ops
spec:
  selector:
    app: cis-ops-backend
  ports:
  - port: 4000
    targetPort: 4000
  type: ClusterIP
