deployment/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cis-ops-frontend
  namespace: cis-ops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cis-ops-frontend
  template:
    metadata:
      labels:
        app: cis-ops-frontend
    spec:
      containers:
      - name: frontend
        image: docker.io/sayan896/cis-ops-frontend:b32baab0890170f3bab08756f45d3261ca41720a
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: cis-ops-frontend-service
  namespace: cis-ops
spec:
  selector:
    app: cis-ops-frontend
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
