deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cis-ops-ingress
  namespace: cis-ops
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "*"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: cis-ops-backend-service
            port:
              number: 4000
      - path: /socket.io(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: cis-ops-backend-service
            port:
              number: 4000
      - path: /()(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: cis-ops-frontend-service
            port:
              number: 80
